# fast-api-genai

./: .pre-commit-config.yaml  pyproject.toml
